@@ -36,3 +36,6 @@ Version 0.8
 * reenable auto getvsn
 * Support for copy in mk5daemon, and support for HUP signal in mk5cp and mk5dir
 * support difxStart messages
+* mk5cp by exp code
+* alert messages for mk5cp and mk5dir
+* minor bug fixes for mk5cp and mk5dir
